--- a/package.json
+++ b/package.json
@@ -9,39 +9,42 @@
     "lint:fix": "eslint '+(src|tools)/**/*.{ts,tsx}' --fix"
   },
   "dependencies": {
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.4",
     "@types/color": "^3.0.1",
     "@types/react-router-native": "^5.1.0",
     "antd-mobile": "^2.3.4",
     "color": "^3.1.3",
-    "expo": "~40.0.0",
-    "expo-splash-screen": "~0.8.0",
-    "expo-updates": "~0.4.0",
+    "expo": "^41.0.0",
+    "expo-splash-screen": "~0.10.2",
+    "expo-updates": "~0.5.4",
     "native-base": "^2.15.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "~0.63.4",
-    "react-native-gesture-handler": "~1.8.0",
+    "react-native": "0.63.4",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-masked-text": "^1.13.0",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-screens": "~2.15.0",
-    "react-native-unimodules": "~0.12.0",
+    "react-native-reanimated": "~2.1.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.0.0",
+    "react-native-unimodules": "~0.13.3",
     "react-native-web": "~0.13.12",
     "react-router-native": "^5.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "~7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
-    "babel-preset-expo": "~8.3.0",
+    "babel-preset-expo": "8.3.0",
     "eslint": "^7.24.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react": "^7.23.2",
-    "jest-expo": "~40.0.0",
+    "jest-expo": "^41.0.0",
     "typescript": "~4.0.0"
   },
   "jest": {
